<resources>
    <string name="app_name">EcommarceApp</string>
    <string name="defaultFont">fonts/Raleway-Medium.ttf</string>
    <string name="italicFont">fonts/Raleway-MediumItalic.ttf</string>
    <string name="semiBoldFont">fonts/Raleway-SemiBold.ttf</string>
    <string name="FACEBOOK_ID">534499253571441</string>

    <color name="search_layover_bg">@color/gray</color>
    <color name="search_field_bg">@color/white_ish</color>


    <string name="search_hint">Search&#8230;</string>
    <string name="hint_prompt">Speak an item name</string>

    <string name="cd_up_button">Up navigation button</string>
    <string name="cd_voice_search">Voice search</string>
    <string name="cd_clear_button">Clear field</string>
    <string name="cd_suggestion_icon">List item icon</string>


    <string name="item_1">Home</string>
    <string name="item_2">All Categories</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">My Rewards</string>
    <string name="my_orders">My Orders</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My Wishlist</string>
    <string name="my_account">My Account</string>

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="html" translatable="false">
        <![CDATA[
        <html>
            <head></head>
            <body>%1$s</body>
        </html>"
        ]]>
    </string>
</resources>
